--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -4,22 +4,27 @@
     <meta charset=\"utf-8\">
     <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">
   </head>
-  <body>
+  <body style="background: cornsilk;">
     <h2><img src="ic_launcher.png" /> Print</h2>
 
     <p>
-      Print utility. To use, share a file or text in another app and
-      choose the <a href="https://github.com/billthefarmer/print">
-        <strong>Print</strong> app</a> in the popup dialog that appears.
+      Print utility. To use, either open a document using
+      the <strong>Open</strong> toolbar icon or share a file or text
+      in another app and choose
+      the <a href="https://github.com/billthefarmer/print">
+        <strong>Print</strong></a> app in the popup dialog that appears.
     </p>
     <p>
       In the toolbar you can…
     </p>
     <ul>
-      <li><strong>Print</strong> the document, or write a pdf file</li>
       <li><strong>Open</strong> a document using the file manager</li>
-      <li><strong>Share</strong> the document with another app</li>
+      <li><strong>Print</strong> the document, or write a pdf file</li>
       <li><strong>About</strong> show the app copyright and version</li>
     </ul>
+    <p>
+      Copyright &copy;
+      2021 <a href="https://github.com/billthefarmer">Bill Farmer</a>.
+    </p>
   </body>
 </html>
