--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -23,6 +23,10 @@
       <li><strong>About</strong> show the app copyright and version</li>
     </ul>
     <p>
+      Markdown markup in the text will be parsed and rendered by the
+      <a href="https://github.com/commonmark/commonmark-java">commonmark</a>
+      markdown library.
+    <p>
       Copyright &copy;
       2021 <a href="https://github.com/billthefarmer">Bill Farmer</a>.
     </p>
