--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -9,7 +9,7 @@
 
     <p>
       Print utility. To use, either open a document using
-      the <strong>Open</strong> toolbar icon or share a file or text
+      the <strong>Open</strong> toolbar icon, or share a file or text
       in another app and choose
       the <a href="https://github.com/billthefarmer/print">
         <strong>Print</strong></a> app in the popup dialog that appears.
@@ -25,7 +25,8 @@
     <p>
       Markdown markup in the text will be parsed and rendered by the
       <a href="https://github.com/commonmark/commonmark-java">commonmark</a>
-      markdown library.
+      markdown library. URLs in the text will be turned into links so
+      they may be followed.
     <p>
       Copyright &copy;
       2021 <a href="https://github.com/billthefarmer">Bill Farmer</a>.
