--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset=\"utf-8\">
-    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body style="background: cornsilk;">
     <h2><img src="ic_launcher.png" /> Print</h2>
