Update help, docs

--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -20,10 +20,17 @@
     <ul>
       <li><strong>Open</strong> a document using the file manager</li>
       <li><strong>Print</strong> the document, or write a pdf file</li>
+    </ul>
+    <p>
+      In the menu you can…
+    </p>
+    <ul>
+      <li><strong>Markdown</strong> toggle markdown processing off and on</li>
       <li><strong>About</strong> show the app copyright and version</li>
     </ul>
     <p>
-      Markdown markup in the text will be parsed and rendered by the
+      Markdown markup in the text will be parsed and rendered, if
+      enabled, by the
       <a href="https://github.com/commonmark/commonmark-java">commonmark</a>
       markdown library. URLs in the text will be turned into links so
       they may be followed.
