--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -33,7 +33,7 @@
       enabled, by the
       <a href="https://github.com/commonmark/commonmark-java">commonmark</a>
       markdown library. URLs in the text will be turned into links so
-      they may be followed.
+      they may be followed. Markdown tables and task lists are supported.
     </p>
     <p>
       Copyright &copy;
