Update README, version, changelog

--- a/src/main/assets/print.html
+++ b/src/main/assets/print.html
@@ -33,11 +33,12 @@
       enabled, by the
       <a href="https://github.com/commonmark/commonmark-java">commonmark</a>
       markdown library. URLs in the text will be turned into links so
-      they may be followed. Markdown tables and task lists are supported.
+      they may be followed. Markdown subscript, superscript, underscore,
+      strikethrough, tables and task lists are supported.
     </p>
     <p>
       Copyright &copy;
-      2021 <a href="https://github.com/billthefarmer">Bill Farmer</a>.
+      2023 <a href="https://github.com/billthefarmer">Bill Farmer</a>.
     </p>
   </body>
 </html>
